@@ -22,6 +22,38 @@ namespace TAO
       }
       return 1;
     }
+
+    // unbind reproduces the ACE_Hash_Map_Manager_Ex's unbind behavior
+    template <typename Container>
+    int unbind(
+      Container& c,
+      const typename Container::key_type& k,
+      typename Container::mapped_type& v
+      )
+    {
+      typename Container::const_iterator iter = c.find(k);
+      if (iter != c.end())
+      {
+        v = iter->second;
+        if (c.erase(k) == 1)
+        {
+          return 0;
+        }
+        return -1;
+      }
+      return -1;
+    }
+
+    // unbind reproduces the ACE_Hash_Map_Manager_Ex's unbind behavior
+    template <typename Container>
+    int unbind(
+      Container& c,
+      const typename Container::key_type& k
+      )
+    {
+      Container::mapped_type v;
+      return unbind(c, k, v);
+    }
   }
 }
 
